loadtest-controller: LK compatible